# sanitizer-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  Secrets.dev.toml.example  Shuttle.toml  docker-compose.yml  shuttle_prebuild.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs  models.rs  process.rs
src/commands/: age.rs  config.rs  credits.rs  mod.rs  sanitize.rs  settings.rs
src/config/: data.rs  framework.rs  mod.rs  setup.rs
src/database/: connection.rs  mod.rs  operations.rs
src/discord/: events.rs  mod.rs
src/discord/commands/: credits.rs  help.rs  mod.rs  sanitize.rs  settings.rs
src/handlers/: discord.rs  discord_events.rs  event.rs  events.rs  mod.rs  parse_url.rs  quickvids_api.rs  regex.rs  response.rs  sanitize_input.rs
src/handlers/db/: connection.rs  mod.rs  models.rs  operations.rs
src/handlers/url_type/: mod.rs
src/handlers/user_input/: external_api.rs  mod.rs  parse_input.rs  parse_url.rs  quickvids_api.rs  sanitize_input.rs
src/logic/: input_handler.rs
src/sanitize/: core.rs  messages.rs
src/utils/: cache.rs  mod.rs
src/utils/database/: connection.rs  mod.rs  operations.rs
src/utils/sanitize/: core.rs  messages.rs  mod.rs
