[package]
name = "sanitizer-bot"
version = "1.0.0"
authors = ["suhaybu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhaybu/sanitizer-bot"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
libsql = "0.9"
regex = "1.12"
dashmap = "6.1"
lru = "0.16"
scraper = "0.24"

futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "std",
  "time",
  "env-filter",
] }

# Shuttle
shuttle-runtime = "0.57"
shuttle-turso = "0.57"

# Twilight branch: main
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = [ "builder" ] }

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
