[package]
name = "sanitizer-bot"
version = "1.0.0"
authors = ["suhaybu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhaybu/sanitizer-bot"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
libsql = "0.9"
regex = "1.12"
dashmap = "6.1"
lru = "0.16"
scraper = "0.25"
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "time", "env-filter"] }
# Twilight branch: main
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = [ "builder" ] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
