[package]
name = "sanitizer-bot"
version = "1.3.2"
authors = ["suhaybu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhaybu/sanitizer-bot"
edition = "2024"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
turso = { version = "0.7", features = ["sync"] }
regex = "1.13"
dashmap = "6.2"
lru = "0.18"
scraper = "0.27"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.53", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "time", "env-filter"] }
# Twilight branch: main
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = [ "builder" ] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
